k8s/load-balancer/ingress-ws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-ws-ingress
  namespace: space
  annotations:
    nginx.ingress.kubernetes.io/affinity: "ip_hash"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
spec:
  ingressClassName: api-nginx
  rules:
    - host: localhost
      http:
        paths:
        - path: /events
          pathType: Prefix
          backend:
            service:
              name: server-service
              port:
                name: http
