k8s/load-balancer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-main-ingress
  namespace: space
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: api-nginx
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port: 
                name: http
        - path: /api/(.*)
          pathType: Prefix
          backend:
            service:
              name: server-service
              port: 
                name: http
